Mon Feb  4 08:28:33 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man_db.conf.in: Make /usr/local/share/man mandatory rather
	  than /usr/local/man (thanks, Reuben Thomas; Debian bug #463892).

Fri Feb  1 09:01:34 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/replace.sin.in: Strip off ".if !'po4a'hide' " from input
	  manual pages. It's a no-op except for po4a's purposes, and
	  removing it helps non-groff manual page renderers.

Mon Jan 28 08:54:47 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* docs/man-db.lsm: Update to 2.5.1.

Mon Jan 28 08:47:51 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.1.
	* po/man-db.pot, po/*.po: Update.

Sun Jan 27 22:48:32 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Support Korean when configured with support for the multibyte groff
	patch (thanks, Hansun Lee; Ubuntu bug #176896).

	* src/encodings.c (compatible_encodings): Allow EUC-KR -> UTF-8.
	  (get_roff_encoding): Handle ko_KR.UTF-8 via devutf8.

Sun Jan 27 13:42:31 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_join): Initialise source, buffer, buflen,
	  bufmax, line_cache, and peek_offset.

Sun Jan 27 13:37:17 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.h (struct pipeline): Add ignore_signals member.
	* lib/pipeline.c (pipeline_new): Initialise ignore_signals to 1.
	  (pipeline_join): Set ignore_signals if either input pipeline has
	  it set.
	  (pipeline_start): Only ignore SIGINT and SIGQUIT if ignore_signals
	  is set.
	  (pipeline_wait): Only restore SIGINT and SIGQUIT if ignore_signals
	  is set.
	* lib/decompress.c (decompress_open, decompress_fdopen): Set
	  ignore_signals to 0 so that SIGINT and SIGQUIT are not ignored
	  just because a decompression process is running (Debian bug
	  #462276).
	* docs/NEWS: Document this.

Thu Jan 24 17:12:24 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in (INTERRUPTED): Remove.