@@ -1,3 +1,12 @@
+Sun Feb 17 16:59:22 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* Makefile.in, aclocal.m4, config.h.in, configure, docs/Makefile.in,
+	  gnulib, lib/Makefile.in, libdb/Makefile.in, man/Makefile.in,
+	  man/de/Makefile.in, man/es/Makefile.in, man/fr/Makefile.in,
+	  man/it/Makefile.in, man/ja/Makefile.in, manual/Makefile.in,
+	  src/Makefile.in, tools/Makefile.in: Upgrade to Automake 1.10.1 and
+	  Gnulib 20080201.
+
 Mon Feb  4 08:28:33 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* src/man_db.conf.in: Make /usr/local/share/man mandatory rather
